# SocatTUI

./: README.md  main.py  pyproject.toml
socattui/: __init__.py  app.py  cli.py  config.py  detector.py  socat.py
