[project]
name = "socattui"
version = "0.2.1"
description = "TUI tool for configuring socat USB relay/bridging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.8",
    "pyyaml>=6.0",
    "click>=8.0",
    "pyserial>=3.5",
]

[project.scripts]
socattui = "socattui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
